environments/dev/ramen-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ramen-ui
  namespace: dev
spec:
  selector:
    app: ramen-ui
  ports:
    - port: 80
      targetPort: 80
